--- a/bots/Makefile
+++ b/bots/Makefile
@@ -5,10 +5,10 @@ COMMON=../util/card.cpp ../util/require.h ../util/gamelist.h
 
 all: $(OBJS)
 
-bot_Thomas.o: bot_Thomas.cpp $(COMMON)
+bot_Thomas.o: bot_Thomas.cpp $(COMMON) bot.h bot_Thomas.h
 	$(CC) $(CFLAGS) -c bot_Thomas.cpp
 
-bot.o: bot.cpp $(COMMON)
+bot.o: bot.cpp $(COMMON) bot.h
 	$(CC) $(CFLAGS) -c bot.cpp
 
 ../util/card.o: 
