Replaced CC with CXX and added conditionals

--- a/bots/Makefile
+++ b/bots/Makefile
@@ -1,5 +1,5 @@
-CC=g++
-CFLAGS=-std=c++11 -g
+CXX?=g++
+CFLAGS?=-std=c++11 -g
 OBJS=bot_Thomas.o bot.o
 COMMON=../util/card.cpp ../util/require.h ../util/gamelist.h
 
@@ -8,7 +8,7 @@ all: $(OBJS)
 bot_Thomas.o: bot.h
 
 %.o: %.cpp %.h $(COMMON)
-	$(CC) $(CFLAGS) -c $<
+	$(CXX) $(CFLAGS) -c $<
 
 ../util/card.o: 
 	make -C ../util/
