--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -1,11 +1,10 @@
 CXX?=g++
-CFLAGS?=-std=c++11 -g -Wall
+CXXFLAGS?=-std=c++11 -g -Wall
 OBJS=card.o require.o
 
 all: $(OBJS)
 
 %.o: %.cpp %.h
-	$(CXX) $(CFLAGS) -c $<
 
 .PHONY: clean
 clean:
