Added bot_Thomas.h for @Thomas1995 to edit; removed class files for custom bots -- now only headers; enjoy!

--- a/src/bots/Makefile
+++ b/src/bots/Makefile
@@ -1,6 +1,6 @@
 CXX?=g++
 CXXFLAGS?=-std=c++11 -g -Wall
-OBJS=bot.o bot_Thomas.o bot_Eric.o bot_Eugen.o bot_Lucian.o
+OBJS=bot.o
 COMMON=../util/card.cpp ../util/require.h ../util/gamelist.h
 
 all: $(OBJS)
